# gnubg

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  TODO  acconfig.h  analysis.c  analysis.h  autogen.sh  backgammon.h  bearoff.c  bearoff.h  bearoffdump.c  bearoffgammon.c  bearoffgammon.h  boarddim.h  boardpos.c  boardpos.h  boards.xml  commands.inc  common.h  configure.ac  configure.in  credits.sh  database.c  database.h  dbprovider.c  dbprovider.h  dice.c  dice.h  drawboard.c  drawboard.h  erf.c  erftest.c  eval.c  eval.h  evallock.c  export.c  export.h  (+176 more)
board3d/: DrawOGL.c  GLwidget.c  Makefile.am  ModelOGL.c  Occluders.c  PickOGL.c  Shapes.inc  ShimOGL.c  ShimOGL.h  drawboard3d.c  font3d.c  font3d.cpp  font3dOGL.c  fun3d.h  graph.c  gtkcolour3d.c  inc3d.h  legacyGLinc.h  matrix.c  matrix.h  misc3d.c  model.c  model.h  myftgl.c  myftgl.h  mylist.c  mylist.h  shadow.c  shadow.h  testgtkboard.c  texture3d.c  timer.c  tr.c  tr.h  types3d.h  widget3d.c
boards/: boards.xml
doc/: Makefile.am  gnubgdb.xml  makebearoff.6  makehyper.6
ext/: ext.c  ext.h  extwin.c  extwin.h
flags/: Makefile.am
html-images/: script
lib/: Makefile.am  SFMT.c  SFMT.h  buffer.c  cache.c  cache.h  dynarray.c  dynarray.h  event.c  event.h  fifo.c  fifo.h  gnubg-types.h  hash.c  hash.h  hashtest.c  heap.c  heap.h  inputs.c  isaac.c  isaac.h  isaacs.h  list.c  list.h  md5.c  md5.h  md5test.c  mkinstalldirs  mt19937ar.c  mt19937ar.h  mt19937int.c  mt19937int.h  neuralnet.c  neuralnet.h  neuralnetsse.c  output.c  rand_r.h  sigmoid.h  simd.h  sse.h
xpm/: Makefile.am  Makefile.in
(+56 files in other folders)
