# $Id: Makefile.am,v 1.8 2008/06/10 08:09:16 c_anthon Exp $

EXTRA_DIST= allgames.xpm beaver.xpm gnu.xpm hint_alt.xpm nextgame.xpm nextmarked.xpm nextmove.xpm prevgame.xpm prevmarked.xpm prevmove.xpm question.xpm resigns.xpm resign.xpm stock_cancel.xpm stock_new_all.xpm stock_new_money.xpm stock_ok.xpm tb_anticlockwise.xpm tb_clockwise.xpm x.xpm

